# APWP-T2

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  makefile  pyproject.toml
alembic/: env.py
alembic/versions/: 3015aa878b58_migração_inicial.py  98d26f257516_produtos.py
src/: setup.py  uow-repo.pu
src/alembic/: env.py
src/alembic/versions/: 187b8e5138d0_produtos_mensagens.py  411f68a8cff8_produtos_mensagens.py  6e8d48abafb8_alocacao_view.py
src/alocacao/: bootstrap.py  config.py  views.py
src/alocacao/adaptadores/: orm.py  repositorio.py
src/alocacao/adapters/: email.py  notifications.py  orm.py  repository.py
src/alocacao/aplicacao/: flask_app.py  redis_eventconsumer.py  redis_eventpublisher.py
src/alocacao/camada_servicos/: handlers.py  messagebus.py  servicos.py  unit_of_work.py  uow.py
src/alocacao/dominio/: comandos.py  eventos.py  modelo.pu  modelo.py
tests/: conftest.py  suporte_testes.py
tests/e2e/: api_client.py  redis_client.py  test_api.py  test_eventos_externos.py
tests/integracao/: test_email.py  test_orm.py  test_repositorio.py  test_uow.py  test_views.py
tests/ponta-a-ponta/: test_api.py
tests/unidade/: test_alocacao.py  test_handler.py  test_lotes.py  test_produto.py  test_servicos.py
