[tool.poetry]
name = "apwp-t2"
version = "0.1.0"
description = ""
authors = ["ralphribeiro <ralph_ribeiro@msn.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.3"
SQLAlchemy = "^1.4.12"
requests = "^2.25.1"
pathlib = "^1.0.1"
Flask = "^1.1.2"
psycopg2-binary = "^2.8.6"
alembic = "^1.6.0"
tenacity = "^7.0.0"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
radon = "^4.5.0"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
